--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
   background-image: url('./assets/FONDO.jpg');
+  font-family: 'Mundial';
 }
 
 @font-face {
@@ -59,6 +60,7 @@ body {
 .cl-textos { color: #404040;}
 .cl-black { color: #000000; }
 .cl-gray-strong { color: #233544; }
+.cl-gray-strong-btn { background-color: #233544; }
 .cl-gray { color: #586B7C; }
 
 
@@ -68,10 +70,41 @@ body {
 .cl-coffe { color: #eae2b7; }
 .cl-blue-sky { color: #00BDFF; }
 .cl-gray-light { color: #E0E0E0; }
+.cl-gray-light-btn { color: #E0E0E0; }
+.bg-gray-light { background-color: #E0E0E0; }
 .cl-blue-gray { color: #2E465B; }
+
+.btn-rgt { 
+  background-color: #233544;
+  color: #ffffff;
+}
+.btn-rgt:hover {
+  background-color: #2E465B;
+  color: #ffffff;
+}
+
+.btn-cancel:hover {
+  background-color: #9e9e9e;
+}
 
 #logo-login {
   object-fit: cover;
   object-position: center top;
   width: 12rem;
+}
+
+#bg-image {
+  background-image: url('./assets/create-account.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%; 
+  height: 100%;
+}
+
+#span-input { border-right: 3px solid #cd3739;}
+.input-brd { border-left: 1px solid #cd3739;}
+.border-form { border-top: 1px solid #404040 }
+
+input[type=checkbox]:checked {
+  accent-color: #2E465B;
 }
