--- a/styles.css
+++ b/styles.css
@@ -112,3 +112,10 @@ input[type=checkbox]:checked {
 table {
   padding: -10;
 }
+
+.badge-cat-work {
+  background-color: #f77f00;
+  color: #ffffff;
+  border-radius: 5px;
+  padding: 5px 7px;
+}
