--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
+
 body {
   background-image: url('./assets/FONDO.jpg');
   font-family: 'Mundial';
@@ -115,7 +117,6 @@ table {
 
 .badge-cat-work {
   background-color: #f77f00;
-  color: #ffffff;
   border-radius: 5px;
   padding: 5px 7px;
 }
