--- a/styles.css
+++ b/styles.css
@@ -115,8 +115,9 @@ table {
   padding: -10;
 }
 
-.badge-cat-work {
-  background-color: #f77f00;
+.badge-cat {
+  text-align: center;
   border-radius: 5px;
-  padding: 5px 7px;
+  padding: 2px;
+  width: 2px;
 }
